@@ -123,9 +123,14 @@ class TestsNeedingReweave(TestReconcile):
         # and no backup weave should have been needed/made.
         self.checkNoBackupInventory(d)
 
-    def test_reconile_empty(self):
+    def test_reconcile_empty(self):
         # in an empty repo, theres nothing to do.
         self.checkEmptyReconcile()
+
+    def test_reconcile_actions(self):
+        """reconcile_actions() returns a set naming what a repo reconciles."""
+        repo = self.make_repository('repo')
+        self.assertNotEqual(None, set(repo.reconcile_actions()))
 
     def test_reconcile_empty_thorough(self):
         # reconcile should accept thorough=True
@@ -135,6 +140,10 @@ class TestsNeedingReweave(TestReconcile):
         # smoke test for the all in one ui tool
         bzrdir_url = self.get_url('inventory_without_revision')
         bzrdir = bzrlib.bzrdir.BzrDir.open(bzrdir_url)
+        repo = bzrdir.open_repository()
+        if 'inventory_gc' not in repo.reconcile_actions():
+            # irrelevant test.
+            return
         reconcile(bzrdir)
         # now the backup should have it but not the current inventory
         repo = bzrdir.open_repository()
@@ -145,11 +154,14 @@ class TestsNeedingReweave(TestReconcile):
         d_url = self.get_url('inventory_without_revision')
         d = bzrlib.bzrdir.BzrDir.open(d_url)
         repo = d.open_repository()
+        if 'inventory_gc' not in repo.reconcile_actions():
+            # irrelevant test.
+            return
         self.checkUnreconciled(d, repo.reconcile())
         reconciler = repo.reconcile(thorough=True)
         # no bad parents
         self.assertEqual(0, reconciler.inconsistent_parents)
-        # and one garbage inventoriy
+        # and one garbage inventory
         self.assertEqual(1, reconciler.garbage_inventories)
         self.check_missing_was_removed(repo)
 
@@ -157,10 +169,14 @@ class TestsNeedingReweave(TestReconcile):
             **kwargs):
         # actual low level test.
         repo = aBzrDir.open_repository()
-        if ([None, 'missing', 'references_missing'] 
+        if ([None, 'missing', 'references_missing']
             != repo.get_ancestry('references_missing')):
             # the repo handles ghosts without corruption, so reconcile has
-            # nothing to do here
+            # nothing to do here 
+            # specifically, this test has the inventory 'missing' present
+            # and the revision 'missing' missing, so clearly 'missing' 
+            # cannot be reported in the present ancestry -> missing
+            # is something that can be filled as a ghost.
             expected_inconsistent_parents = 0
         else:
             expected_inconsistent_parents = 1
@@ -190,6 +206,9 @@ class TestsNeedingReweave(TestReconcile):
         # other tests use the lower level repo.reconcile()
         d_url = self.get_url('inventory_without_revision_and_ghost')
         d = bzrlib.bzrdir.BzrDir.open(d_url)
+        if 'inventory_gc' not in d.open_repository().reconcile_actions():
+            # irrelevant test.
+            return
         def reconcile():
             reconciler = Reconciler(d)
             reconciler.reconcile()
@@ -201,6 +220,9 @@ class TestsNeedingReweave(TestReconcile):
         d_url = self.get_url('inventory_without_revision_and_ghost')
         d = bzrlib.bzrdir.BzrDir.open(d_url)
         repo = d.open_repository()
+        if 'inventory_gc' not in repo.reconcile_actions():
+            # irrelevant test.
+            return
         # nothing should have been altered yet : inventories without
         # revisions are not data loss incurring for current format
         self.check_thorough_reweave_missing_revision(d, repo.reconcile,
@@ -327,8 +349,8 @@ class TestReconcileWithIncorrectRevisionCache(TestReconcile):
         g = repo.get_revision_graph()
         self.assertEqual(('1', '2'), g['wrong-first-parent'])
 
-    def test_reconcile_wrong_order_secondary(self):
-        # a wrong order in secondary parents is ignored.
+    def test_reconcile_wrong_order_secondary_inventory(self):
+        # a wrong order in the parents for inventories is ignored.
         t = get_transport(self.get_url()).clone('reversed-secondary-parents')
         d = bzrlib.bzrdir.BzrDir.open_from_transport(t)
         repo = d.open_repository()
